Use current console
Use getConsole for retrieve the current console or create a default one
if not exists.